2008-02-16  Benoît Dejean  <benoit@placenet.org>

	* configure.in: Bumped version number to 0.15.
	* MAINTAINERS: Added file so translators can commit their work.

2006-11-26  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c (settings_cb): remove the font size and
	timeout options from the settings window, now we use desktop fonts and
	the update interval is set to 1000 (ms).

	Fixes bug #373890.

	* ChangeLog: Correct joergen email.

2006-10-15  Jörgen Scheibengruber <mfcn@gmx.de>

	* configure.in:
	* pixmaps/Makefile.am:
	* pixmaps/netspeed-wireless-100.png:
	* pixmaps/netspeed-wireless-25.png:
	* pixmaps/netspeed-wireless-50.png:
	* pixmaps/netspeed-wireless-75.png:
	* src/Makefile.am:
	* src/backend.c: (free_device_info), (get_device_info),
	(compare_device_info), (get_wireless_info):
	* src/backend.h:
	* src/netspeed.c: (applet_change_size_or_orient),
	(update_quality_icon), (init_quality_pixbufs),
	(icon_theme_changed_cb), (update_applet), (info_response_cb),
	(showinfo_cb), (netspeed_enter_cb), (netspeed_leave_cb),
	(netspeed_applet_factory):
	* src/netspeed.h:
	Add wireless support. Big thanks to Pedro for the patch!

2006-09-28  Benoît Dejean  <benoit@placenet.org>

	* m4/.cvsignore:
	
	Added a dummy file to make sure m4/ doesn't vanish with up -dP.

2006-09-28  Benoît Dejean  <benoit@placenet.org>

	* AUTHORS:
	* src/netspeed.c: (about_cb):

	Fixed my email and updated AUTHORS.

2006-09-26  Ilkka Tuohela <hile@iki.fi>

	* configure.in: Added fi t ALL_LINGUAS

2006-09-24  Jörgen Scheibengruber <mfcn@gmx.de>

	* configure.in:
	* Makefile.am:
	* po/POTFILES.in:
	* docs/*:
	gnome-doc-utils	migration; fix make distcheck => should
	work now :)

2006-09-24  Jörgen Scheibengruber <mfcn@gmx.de>

	* src/netspeed.c: (netspeed_applet_factory):
	fixed tiny leak on initialization
	* configure.in: prepare new release => 0.14

2006-08-09  Benoît Dejean  <benoit@placenet.org>

	* src/netspeed.c: (netspeed_applet_factory):
