@@ -25,11 +25,11 @@
 static const char* const dev_type_icon[DEV_UNKNOWN + 1] = {
 	"gnome-dev-loopback",         //DEV_LO
 	"gnome-dev-pci",              //DEV_ETHERNET
-	"gnome-dev-wavelan",          //DEV_WIRELESS
+	"network-wireless",          //DEV_WIRELESS
 	"gnome-dev-ppp",              //DEV_PPP,
 	"gnome-dev-plip",             //DEV_PLIP,
 	"gnome-dev-plip",             //DEV_SLIP
-	"gnome-fs-network",           //DEV_UNKNOWN
+	"network-workgroup",           //DEV_UNKNOWN
 };
 
 static const char* wireless_quality_icon[] = {
@@ -41,7 +41,7 @@ static const char* wireless_quality_icon[] = {
 
 static const char IN_ICON[] = "stock_navigate-next";
 static const char OUT_ICON[] = "stock_navigate-prev";
-static const char ERROR_ICON[] = "stock_dialog-error";
+static const char ERROR_ICON[] = "gtk-dialog-error";
 static const char LOGO_ICON[] = "netspeed_applet";
 
 /* How many old in out values do we store?
