@@ -1,3 +1,9 @@
+2008-02-16  Jaap Haitsma  <jaap@haitsma.org>
+
+	* src/netspeed.c:
+	* src/netspeed.h:
+	Don't use deprecated icon names. Fixes bug #516871
+
 2008-02-16  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in: Bumped version number to 0.15.
